--- a/_posts/2023-08-21-week-1-plans.md
+++ b/_posts/2023-08-21-week-1-plans.md
@@ -3,7 +3,7 @@ toc: true
 comments: false
 layout: post
 title: Week one plans
-description: Example Plan!!! Analyze hacks and plan.
+description: Displays the plans for this week
 type: plans
 courses: { compsci: {week: 1} }
 ---
