--- a/_posts/2023-08-31-Mini-Game.md
+++ b/_posts/2023-08-31-Mini-Game.md
@@ -3,7 +3,7 @@ toc: true
 comments: false
 layout: post
 title: Mini Game
-description: Example Blog!!!  This shows planning and notes from hacks.
+description: Mini game that tests you on how much you know about me.
 type: hacks
 courses: { compsci: {week: 0} }
 ---
