--- a/_posts/2023-08-21-week-1-plans.md
+++ b/_posts/2023-08-21-week-1-plans.md
@@ -2,7 +2,7 @@
 toc: true
 comments: false
 layout: post
-title: Week one plans
+title: Week 1 plans
 description: Displays the plans for this week
 type: plans
 courses: { compsci: {week: 1} }
