--- a/_notebooks/2023-09-10-pokemon.ipynb
+++ b/_notebooks/2023-09-10-pokemon.ipynb
@@ -1,10 +1,72 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "---\n",
+    "toc: true\n",
+    "comments: false\n",
+    "layout: post\n",
+    "title: Pokemon Game\n",
+    "description: Mini Pokemon Game\n",
+    "type: hacks\n",
+    "courses: { compsci: {week: 3} }\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the Pokémon Battle!\n",
+      "\n",
+      "Pikachu's Pikachu vs. Mewtwo's Mewtwo\n",
+      "Pokemon images: Pikachu.png vs. Mewtwo.png\n",
+      "\n",
+      "Pikachu's Health: **************************************************************************************************** (100/100)\n",
+      "Mewtwo's Health: **************************************************************************************************** (100/100)\n",
+      "\n",
+      "Select your move:\n",
+      "1. Attack: Launch a basic attack with your Pokémon.\n",
+      "2. Special Move: Use a special move with a chance of higher damage.\n",
+      "3. Run Away: Flee from the battle.\n",
+      "Pikachu used Punch! Mewtwo lost 25 health.\n",
+      "Pikachu's Health: *************************************************************************** (75/100)\n",
+      "Mewtwo's Health: **************************************************************************************************** (100/100)\n",
+      "\n",
+      "Select your move:\n",
+      "1. Attack: Launch a basic attack with your Pokémon.\n",
+      "2. Special Move: Use a special move with a chance of higher damage.\n",
+      "3. Run Away: Flee from the battle.\n",
+      "Pikachu used Light Bolt! Mewtwo lost 25 health.\n",
+      "Pikachu's Health: *************************************************************************** (75/100)\n",
+      "Mewtwo's Health: *************************************************************************** (75/100)\n",
+      "\n",
+      "Select your move:\n",
+      "1. Attack: Launch a basic attack with your Pokémon.\n",
+      "2. Special Move: Use a special move with a chance of higher damage.\n",
+      "3. Run Away: Flee from the battle.\n",
+      "Pikachu used Light Bolt! Mewtwo lost 25 health.\n",
+      "Pikachu's Health: *************************************************************************** (75/100)\n",
+      "Mewtwo's Health: ************************************************** (50/100)\n",
+      "\n",
+      "Select your move:\n",
+      "1. Attack: Launch a basic attack with your Pokémon.\n",
+      "2. Special Move: Use a special move with a chance of higher damage.\n",
+      "3. Run Away: Flee from the battle.\n",
+      "Pikachu used Super Smash! Mewtwo lost 50 health.\n",
+      "\n",
+      "Battle Result:\n",
+      "Pikachu wins!\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "# Define the available Pokémon and their attributes\n",
@@ -91,17 +153,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "---\n",
-    "comments: true\n",
-    "layout: post\n",
-    "title: Test\n",
-    "description: A key to development in this class is the association VSCode to a GitHub pages project.  This is where students update assignments and present work.\n",
-    "type: tangibles\n",
-    "courses: { compsci: {week: 0} }\n",
-    "categories: [C4.1]\n",
-    "---"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -111,7 +163,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.12"
   },
   "orig_nbformat": 4
