--- a/_posts/2023-09-10-Time-zone.md
+++ b/_posts/2023-09-10-Time-zone.md
@@ -4,7 +4,7 @@ comments: false
 layout: post
 title: Time zone
 description: A coin flip
-type: hacks
+type: tangibles
 courses: { compsci: {week: 3} }
 ---
 
