--- a/_posts/2023-09-11-hangman.md
+++ b/_posts/2023-09-11-hangman.md
@@ -4,7 +4,7 @@ comments: false
 layout: post
 title: Hangman
 description: A mini hangman game
-type: hacks
+type: tangibles
 courses: { compsci: {week: 3} }
 ---
 
