--- a/_notebooks/2023-09-19-team-test.ipynb
+++ b/_notebooks/2023-09-19-team-test.ipynb
@@ -32,7 +32,7 @@
     "description: This is our Team Test.\n",
     "toc: False\n",
     "comments: False\n",
-    "courses: {'csp': {'week': 4}}\n",
+    "courses: {'compsci': {'week': 4}}\n",
     "type: tangibles\n",
     "---\n",
     "\n",
