--- a/_notebooks/2023-08-30-basics-js-data-types.ipynb
+++ b/_notebooks/2023-08-30-basics-js-data-types.ipynb
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
@@ -623,7 +623,7 @@
    "outputs": [
     {
      "data": {
-      "application/javascript": "// put your javascript code here (make sure to run it and check your outputs in the console)\n",
+      "application/javascript": "\n// Create an object representing myself\nconst myInfo = {\n    name: \"Anvay Yadav\",\n    age: 15,\n    currentClasses: [\"Spanish 6\", \"Ap CSP\", \"Ap Calc\", \"Ap Bio\", \"Honors Humanities 1\"],\n    interests: [\"volunteering\", \"hiking\", \"programming\", \"playing sports\", \"playing piano\"],\n    favoriteFoods: [\"Pizza\", \"Sushi\", \"Burgers\", \"Ice Cream\", \"Tacos\"],\n    favoriteVideoGames: [\"The Legend of Zelda: Breath of the Wild\", \"Minecraft\", \"Overwatch\", \"Rocket League\", \"Among Us\"]\n  };\n  \n  // Print the entire object\n  console.log(\"My Info:\");\n  console.log(myInfo);\n  \n  // Manipulate the arrays within the object\n  myInfo.age += 1;\n  myInfo.currentClasses.push(\"Art History\");\n  myInfo.interests.splice(2, 1, \"cooking\");\n  myInfo.favoriteFoods.pop();\n  myInfo.favoriteVideoGames.shift();\n  \n  // Print the entire object after manipulation\n  console.log(\"My Info after manipulation:\");\n  console.log(myInfo);\n  \n  // Perform mathematical operations\n  const ageIn5Years = myInfo.age + 5;\n  const classesCount = myInfo.currentClasses.length;\n  const interestsCount = myInfo.interests.length;\n  const averageAgeOfClassmates = 16;\n  const ageDifference = myInfo.age - averageAgeOfClassmates;\n  const favoriteFoodsCount = myInfo.favoriteFoods.length;\n  \n  console.log(`In 5 years, I will be ${ageIn5Years} years old.`);\n  console.log(`I am currently taking ${classesCount} classes.`);\n  console.log(`I have ${interestsCount} interests.`);\n  console.log(`The age difference between me and my classmates is ${ageDifference} years.`);\n  console.log(`I have ${favoriteFoodsCount} favorite foods.`);\n  \n  // Use typeof to determine the types of fields\n  console.log(`The type of 'name' is ${typeof myInfo.name}`);\n  console.log(`The type of 'age' is ${typeof myInfo.age}`);\n  console.log(`The type of 'currentClasses' is ${typeof myInfo.currentClasses}`);\n  \n",
       "text/plain": [
        "<IPython.core.display.Javascript object>"
       ]
@@ -698,7 +698,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
