--- a/_notebooks/2023-08-29-basics-of-js.ipynb
+++ b/_notebooks/2023-08-29-basics-of-js.ipynb
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
@@ -519,7 +519,7 @@
    "outputs": [
     {
      "data": {
-      "application/javascript": "\na = 100\nb = 49\n\nif (a > b) {\n  console.log(\"a is greater\");\n} else if (b > a) {\n  console.log(\"b is greater\");\n} else {\n  console.log(\"both are equal\");\n}\n",
+      "application/javascript": "\nvar a = 100;\nvar b = 49;\n\nif (a > b) {\n  console.log(a+\" is greater than \"+b);\n} else if (b > a) {\n  console.log(\"b is greater\");\n} else {\n  console.log(\"both are equal\");\n}\n",
       "text/plain": [
        "<IPython.core.display.Javascript object>"
       ]
@@ -535,7 +535,7 @@
     "var b = 49;\n",
     "\n",
     "if (a > b) {\n",
-    "  console.log(\"a is greater\");\n",
+    "  console.log(a+\" is greater than \"+b);\n",
     "} else if (b > a) {\n",
     "  console.log(\"b is greater\");\n",
     "} else {\n",
