--- a/_notebooks/2023-08-30-basics-js-with-html.ipynb
+++ b/_notebooks/2023-08-30-basics-js-with-html.ipynb
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "vscode": {
      "languageId": "html"
@@ -351,11 +351,37 @@
     {
      "data": {
       "text/html": [
-       "<!-- html code goes here (make sure to run) -->\n",
        "\n",
-       "<script>\n",
-       "  // your javascript code goes here\n",
-       "</script>\n"
+       "<html>\n",
+       "<head>\n",
+       "</head>\n",
+       "<body>\n",
+       "    <div>\n",
+       "        <p>LeBron James is a legendary basketball player known for his incredible skills on the court. He has won numerous championships and awards throughout his career!</p>\n",
+       "        <button id=\"dunkButton\">\"Dunk\"!</button>\n",
+       "    </div>\n",
+       "    <div>\n",
+       "        <a href=\"https://docs.google.com/document/d/160j5RblFoiSHhxt9o7BoCjeJxp2bmlFhHIhuBIXGMgM/edit\" id=\"link1\">LeBron James Dunk</a>\n",
+       "        <a href=\"https://docs.google.com/document/d/1qSDVEV-sg9p-vrqG6FtVjlf8HdwCwc7TJXfN6eNRJUk/edit\" id=\"link2\">LeBron James Image</a>\n",
+       "        <p>Overall, LeBron James is an iconic basketball player and a true legend in the world of sports!</p>\n",
+       "    </div>\n",
+       "\n",
+       "    <script>\n",
+       "        document.getElementById(\"dunkButton\").addEventListener(\"click\", function() {\n",
+       "            // Switch the href attributes of the two <a> tags\n",
+       "            const link1 = document.getElementById(\"link1\");\n",
+       "            const link2 = document.getElementById(\"link2\");\n",
+       "            const tempHref = link1.href;\n",
+       "            link1.href = link2.href;\n",
+       "            link2.href = tempHref;\n",
+       "\n",
+       "            // Change the inner HTML of the top <p> tag\n",
+       "            const topP = document.querySelector(\"div > p\");\n",
+       "            topP.innerHTML = \"Switched!\";\n",
+       "        });\n",
+       "    </script>\n",
+       "</body>\n",
+       "</html>\n"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -366,6 +392,8 @@
     }
    ],
    "source": [
+    "%%html\n",
+    "\n",
     "<html>\n",
     "<head>\n",
     "</head>\n",
@@ -382,14 +410,13 @@
     "\n",
     "    <script>\n",
     "        document.getElementById(\"dunkButton\").addEventListener(\"click\", function() {\n",
-    "            // Switch the href attributes of the two <a> tags\n",
     "            const link1 = document.getElementById(\"link1\");\n",
     "            const link2 = document.getElementById(\"link2\");\n",
     "            const tempHref = link1.href;\n",
     "            link1.href = link2.href;\n",
     "            link2.href = tempHref;\n",
     "\n",
-    "            // Change the inner HTML of the top <p> tag\n",
+    "\n",
     "            const topP = document.querySelector(\"div > p\");\n",
     "            topP.innerHTML = \"Switched!\";\n",
     "        });\n",
@@ -415,7 +442,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
