--- a/_notebooks/2023-09-20-1_4-js-errors.ipynb
+++ b/_notebooks/2023-09-20-1_4-js-errors.ipynb
@@ -105,17 +105,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "\n// Copy your previous code to built alphabetList here\n\nlet letterNumber = 5;\n\nfor (var i = 0; i < alphabet.length; i++) {\n    if (i === letterNumber - 1) {\n        console.log(alphabet[i] + \" is letter number \" + (i + 1) + \" in the alphabet\");\n    }\n}\n\n// Should output:\n// \"e\" is letter number 5 in the alphabet\n",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%js\n",
     "\n",
-    "// Copy your previous code to built alphabetList here\n",
+    "\n",
     "\n",
     "let letterNumber = 5;\n",
     "\n",
@@ -124,9 +135,7 @@
     "        console.log(alphabet[i] + \" is letter number \" + (i + 1) + \" in the alphabet\");\n",
     "    }\n",
     "}\n",
-    "\n",
-    "// Should output:\n",
-    "// \"e\" is letter number 5 in the alphabet"
+    "\n"
    ]
   },
   {
@@ -167,9 +176,9 @@
    "outputs": [],
    "source": [
     "let odds = [];\n",
-    "let i = 1; // Start with 1 to include the first odd number\n",
+    "let i = 1;\n",
     "\n",
-    "while (i < 10) { // Use '<' to ensure numbers below 10 are included\n",
+    "while (i < 10) {\n",
     "  odds.push(i);\n",
     "  i += 2;\n",
     "}\n",
@@ -275,12 +284,11 @@
     "var total = 0\n",
     "\n",
     "\n",
-    "//shows the user the menu and prompts them to select an item\n",
     "console.log(\"Menu\")\n",
     "for (var item in menu) {\n",
-    "    console.log(item + \"  $\" + menu[item].toFixed(2)) //why is toFixed used?\n",
+    "    console.log(item + \"  $\" + menu[item].toFixed(2)) \n",
     "}\n",
-    "//ideally the code should support mutliple items\n",
+    "\n",
     "var burger_count = prompt(\"How many Burgers\")\n",
     "total += menu.burger * burger_count\n",
     "var fries_count = prompt(\"How many Fries\")\n",
@@ -289,7 +297,7 @@
     "total += menu.drink * drink_count\n",
     "\n",
     "\n",
-    "//code should add the price of the menu items selected by the user\n",
+    "\n",
     "console.log(total)\n"
    ]
   },
@@ -333,7 +341,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4,
   "vscode": {
