--- a/_notebooks/2023-08-30-basics-js-data-types.ipynb
+++ b/_notebooks/2023-08-30-basics-js-data-types.ipynb
@@ -8,9 +8,11 @@
     "title: Javascript Data Types/Lists\n",
     "hide: True\n",
     "description: A Tech Talk on javascript data types and how to use with lists\n",
-    "type: ccc\n",
+    "type: hacks\n",
     "permalink: /basics/datatypes\n",
     "author: Rohan Juneja\n",
+    "comments: True \n",
+    "courses: {compsci: {week: 5} }\n",
     "---"
    ]
   },
