--- a/_notebooks/2023-09-20-1_4-js-errors.ipynb
+++ b/_notebooks/2023-09-20-1_4-js-errors.ipynb
@@ -8,10 +8,11 @@
     "layout: post\n",
     "title: 1.4 Correcting errors\n",
     "description: Practice with identifying and correcting code blocks\n",
-    "type: ccc\n",
+    "type: hack\n",
     "author: Safin Singh and Rohan Juneja\n",
     "permalink: /basics/js-debug\n",
-    "hide: True\n",
+    "comments: True \n",
+    "courses: {compsci: {week: 5} }\n",
     "---"
    ]
   },
