--- a/_posts/2023-10-30-Week10plans.md
+++ b/_posts/2023-10-30-Week10plans.md
@@ -7,3 +7,15 @@ description: Week 10 plan
 type: plans
 courses: { compsci: {week: 10} } 
 ---
+
+Qualification week Week of Oct 23
+
+M - Final Project - Individual (Review on canvas), Review Project Documentation, Student Teaching Point Updates with Teacher
+
+Tu - Student Teaching “Developing Programs”
+
+W - Integration Reviews - N@tM qualification opportunity, Introduction to AP Classroom “Finals Day”  exam
+
+Th - Student Teaching “Libraries”
+
+F - Work Day, Individual Point Updates with Teacher
