--- a/_posts/2023-10-31-Week11plans.md
+++ b/_posts/2023-10-31-Week11plans.md
@@ -7,3 +7,16 @@ description: Week 11 plan
 type: plans
 courses: { compsci: {week: 11} } 
 ---
+
+
+N@tM Week of Oct 30 
+
+M - Work Day, Qualification, Individual Reviews 1-2 minute 
+
+Tu - Work Day, Qualification, Individual Reviews 1-2 minute 
+
+W - No School 
+
+Th - Team Live Reviews / Dress Rehearsal, Night at the Museum 
+
+F - Individual Reviews 1-2 minute
