--- a/_posts/Tri2/2023-01-9-Review13.md
+++ b/_posts/Tri2/2023-01-9-Review13.md
@@ -4,7 +4,7 @@ comments: true
 layout: post 
 title: Week 13 Review
 description: Week 13 Review
-type: plans
+type: tangibles
 courses: { compsci: {week: 13} } 
 ---
 
