--- a/_posts/Tri2/2023-01-9-Review14.md
+++ b/_posts/Tri2/2023-01-9-Review14.md
@@ -4,7 +4,7 @@ comments: true
 layout: post 
 title: Week 14 Review
 description: Week 14 Review
-type: plans
+type: tangibles
 courses: { compsci: {week: 14} } 
 ---
 
