--- a/_posts/Tri2/2023-01-9-Review15.md
+++ b/_posts/Tri2/2023-01-9-Review15.md
@@ -4,7 +4,7 @@ comments: true
 layout: post 
 title: Week 15 Review
 description: Week 15 Review
-type: plans
+type: tangibles
 courses: { compsci: {week: 15} } 
 ---
 
