--- a/_posts/Tri2/2023-01-9-Review16.md
+++ b/_posts/Tri2/2023-01-9-Review16.md
@@ -4,7 +4,7 @@ comments: true
 layout: post 
 title: Week 16 Review
 description: Week 16 Review
-type: plans
+type: tangibles
 courses: { compsci: {week: 16} } 
 ---
 
