--- a/_posts/Tri2/2023-01-9-Review17.md
+++ b/_posts/Tri2/2023-01-9-Review17.md
@@ -4,7 +4,7 @@ comments: true
 layout: post 
 title: Week 17 Review
 description: Week 17 Review
-type: plans
+type: tangibles
 courses: { compsci: {week: 17} } 
 ---
 
