--- a/_posts/Tri2/2023-01-9-Review18.md
+++ b/_posts/Tri2/2023-01-9-Review18.md
@@ -4,9 +4,10 @@ comments: true
 layout: post 
 title: Week 18 Review
 description: Week 18 Review
-type: plans
+type: tangibles
 courses: { compsci: {week: 18} } 
 ---
 
 
 In Progress
+
