--- a/_notebooks/2023-12-16-1_4-TeamTeachComputingBias.ipynb
+++ b/_notebooks/2023-12-16-1_4-TeamTeachComputingBias.ipynb
@@ -6,8 +6,8 @@
    "source": [
     "---\n",
     "layout: post\n",
-    "title: Computing Bias\n",
-    "description: Computing Bias\n",
+    "title: Undecidable Problems\n",
+    "description: Undecidable Problems\n",
     "type: tangibles\n",
     "author: Safin Singh and Rohan Juneja\n",
     "permalink: /basics/js-debug\n",
