Login commit pt 2

--- a/2024-01-30-login.md
+++ b/2024-01-30-login.md
@@ -4,7 +4,7 @@ comments: true
 layout: post
 title: Login
 type: hacks
-courses: { compsci: {week: 9} }
+courses: { compsci: {week: 20} }
 ---
 <html lang="en">
 <head>
@@ -26,7 +26,7 @@ courses: { compsci: {week: 9} }
         </p>
         <p>
             <button class="button-spacing" type="submit">Log In</button>
-            <button onclick="window.location.href='https://tanav-kambhampati.github.io/student2/'" class="button-spacing">Sign Up</button>
+            <button onclick="window.location.href='https://anvayyadav.github.io/student/'" class="button-spacing">Sign Up</button>
         </p>
     </form>
     <script>
@@ -52,7 +52,7 @@ courses: { compsci: {week: 9} }
                 .then(response => {
                     if (response.ok) {
                         console.log("User logged in successfully");
-                        window.location.href = "https://tanav-kambhampati.github.io/student2/";
+                        window.location.href = "https://anvayyadav.github.io/student/";
                     } else {
                         console.error("User login failed");
                         const errorMessageDiv = document.getElementById('errorMessage');
