--- a/2024-02-1-signup.md
+++ b/2024-02-1-signup.md
@@ -60,4 +60,4 @@ courses: { compsci: {week: 20} }
                 console.error('Fetch error:', error);
             });
     }
-</script></div>
+</script>
