--- a/2024-02-1-signup.md
+++ b/2024-02-1-signup.md
@@ -2,7 +2,7 @@
 toc: true
 comments: true
 layout: post
-title: signup
+title: Signup for new users!
 type: hacks
 courses: { compsci: {week: 20} }
 ---
